--- a/app/Resources/FOSUserBundle/views/Registration/checkEmail.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/checkEmail.html.twig
@@ -1,5 +1,5 @@
-{% extends "FOSUserBundle::layout.html.twig" %}
+{% extends "::base.html.twig" %}
 
-{% block fos_user_content %}
+{% block body %}
     <p>{{ 'registration.check_email'|trans({'%email%': user.email}, 'FOSUserBundle') }}</p>
-{% endblock fos_user_content %}
+{% endblock body %}
