--- a/app/Resources/FOSUserBundle/views/Resetting/passwordAlreadyRequested.html.twig
+++ b/app/Resources/FOSUserBundle/views/Resetting/passwordAlreadyRequested.html.twig
@@ -1,5 +1,5 @@
-{% extends "FOSUserBundle::layout.html.twig" %}
+{% extends "::base.html.twig" %}
 
-{% block fos_user_content %}
+{% block body %}
 <p>{{ 'resetting.password_already_requested'|trans({}, 'FOSUserBundle') }}</p>
-{% endblock fos_user_content %}
+{% endblock body %}
