--- a/src/Hyper/AdsBundle/Resources/views/Advertiser/index.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Advertiser/index.html.twig
@@ -1,16 +1,16 @@
 {% extends "::base.html.twig" %}
 {% block body %}
-<h1>Advertiser list</h1>
+<h1>{{ 'advertiser.list'|trans({}, 'HyperAdsBundle') }}</h1>
 
+{% if entities|length > 0 %}
 <table class="records_list">
     <thead>
         <tr>
-            <th>Id</th>
-            <th>Name</th>
-            <th>Email</th>
-            <th>Firstname</th>
-            <th>Lastname</th>
-            <th>Actions</th>
+            <th>{{ 'id'|trans({}, 'HyperAdsBundle') }}</th>
+            <th>{{ 'name'|trans({}, 'HyperAdsBundle') }}</th>
+            <th>{{ 'email'|trans({}, 'HyperAdsBundle') }}</th>
+            <th>{{ 'campaigns'|trans({}, 'HyperAdsBundle') }}</th>
+            <th>{{ 'actions'|trans({}, 'HyperAdsBundle') }}</th>
         </tr>
     </thead>
     <tbody>
@@ -19,8 +19,7 @@
             <td><a href="{{ path('admin_advertiser_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
             <td>{{ entity.name }}</td>
             <td>{{ entity.email }}</td>
-            <td>{{ entity.firstName }}</td>
-            <td>{{ entity.lastName }}</td>
+            <td>{{ entity.campaigns|length }}</td>
             <td>
                 <ul>
                     <li>
@@ -35,12 +34,14 @@
     {% endfor %}
     </tbody>
 </table>
-
+{% else %}
+<div class="message">{{ 'no.entities'|trans({}, 'HyperAdsBundle') }}</div>
 <ul>
     <li>
         <a href="{{ path('admin_advertiser_new') }}">
-            Create a new entry
+            {{ 'create.new.entry'|trans({}, 'HyperAdsBundle') }}
         </a>
     </li>
 </ul>
+{% endif %}
 {% endblock %}
