--- a/src/Hyper/AdsBundle/Resources/views/Advertiser/index.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Advertiser/index.html.twig
@@ -19,7 +19,13 @@
             <td><a href="{{ path('admin_advertiser_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
             <td>{{ entity.name }}</td>
             <td>{{ entity.email }}</td>
-            <td>{{ entity.campaigns|length }}</td>
+            <td>
+                {{ entity.campaigns|length }}
+                <br />
+                <a href="{{ path('admin_campaign', {'advertiserId': entity.id }) }}">
+                    {{ 'show'|trans({}, 'HyperAdsBundle') }}
+                </a>
+            </td>
             <td>
                 <ul>
                     <li>
