--- a/src/Hyper/AdsBundle/Resources/views/Advertiser/index.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Advertiser/index.html.twig
@@ -9,7 +9,7 @@
             <th>{{ 'id'|trans({}, 'HyperAdsBundle') }}</th>
             <th>{{ 'name'|trans({}, 'HyperAdsBundle') }}</th>
             <th>{{ 'email'|trans({}, 'HyperAdsBundle') }}</th>
-            <th>{{ 'campaigns'|trans({}, 'HyperAdsBundle') }}</th>
+            <th>{{ '__campaigns'|trans({}, 'HyperAdsBundle') }}</th>
             <th>{{ 'actions'|trans({}, 'HyperAdsBundle') }}</th>
         </tr>
     </thead>
