--- a/src/Hyper/AdsBundle/Resources/views/Advertiser/edit.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Advertiser/edit.html.twig
@@ -1,4 +1,7 @@
 {% extends "::base.html.twig" %}
+{% block title %}
+    {{ 'edit.advertiser'|trans({'advertiserName': entity.name}, 'HyperAdsBundle') }}
+{% endblock %}
 {% block body %}
 <h1>Advertiser edit</h1>
 
