--- a/src/Hyper/AdsBundle/Resources/views/Campaign/new.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Campaign/new.html.twig
@@ -1,4 +1,7 @@
 {% extends "::base.html.twig" %}
+{% block title %}
+{{ 'new.campaign'|trans({}, 'HyperAdsBundle') }}
+{% endblock %}
 {% block body %}
 <h1>Campaign creation</h1>
 
