--- a/src/Hyper/AdsBundle/Resources/views/Page/index.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Page/index.html.twig
@@ -1,4 +1,7 @@
 {% extends "::base.html.twig" %}
+{% block title %}
+{{ 'list.page'|trans({}, 'HyperAdsBundle') }}
+{% endblock %}
 {% block body %}
 <h1>Page list</h1>
 
