--- a/src/Hyper/AdsBundle/Resources/views/Page/new.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Page/new.html.twig
@@ -1,4 +1,7 @@
 {% extends "::base.html.twig" %}
+{% block title %}
+{{ 'new.page'|trans({}, 'HyperAdsBundle') }}
+{% endblock %}
 {% block body %}
 <h1>Page creation</h1>
 
