--- a/src/Hyper/AdsBundle/Resources/views/Zone/new.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Zone/new.html.twig
@@ -1,4 +1,7 @@
 {% extends "::base.html.twig" %}
+{% block title %}
+{{ 'new.zone'|trans({}, 'HyperAdsBundle') }}
+{% endblock %}
 {% block body %}
 <h1>Zone creation</h1>
 
