--- a/src/Hyper/AdsBundle/Resources/views/Banner/show.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Banner/show.html.twig
@@ -1,4 +1,7 @@
 {% extends "::base.html.twig" %}
+{% block title %}
+{{ 'show.banner'|trans({}, 'HyperAdsBundle') }}
+{% endblock %}
 {% block body %}
 <h1>Banner</h1>
 
