--- a/src/Hyper/AdsBundle/Resources/views/Campaign/show.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Campaign/show.html.twig
@@ -1,4 +1,7 @@
 {% extends "::base.html.twig" %}
+{% block title %}
+{{ 'show.campaign'|trans({'campaignName': entity.name}, 'HyperAdsBundle') }}
+{% endblock %}
 {% block body %}
 <h1>Campaign</h1>
 
