--- a/src/Hyper/AdsBundle/Resources/views/Page/edit.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Page/edit.html.twig
@@ -1,4 +1,7 @@
 {% extends "::base.html.twig" %}
+{% block title %}
+{{ 'edit.page'|trans({'pageName': entity.name}, 'HyperAdsBundle') }}
+{% endblock %}
 {% block body %}
 <h1>Page edit</h1>
 
