--- a/src/Hyper/AdsBundle/Resources/views/Default/index.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Default/index.html.twig
@@ -3,5 +3,5 @@
 {{ '__welcome'|trans({}, 'HyperAdsBundle') }}
 {% endblock %}
 {% block body %}
-Hello {{ name }}!
+<blockquote>Many a small thing has been made large by the right kind of advertising.</blockquote>
 {% endblock %}
