--- a/src/Hyper/AdsBundle/Resources/views/Page/index.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Page/index.html.twig
@@ -3,15 +3,16 @@
 {{ 'list.page'|trans({}, 'HyperAdsBundle') }}
 {% endblock %}
 {% block body %}
-<h1>Page list</h1>
+<h1>{{ 'list.page'|trans({}, 'HyperAdsBundle') }}</h1>
 
+{% if entities|length > 0 %}
 <table class="records_list">
     <thead>
         <tr>
-            <th>Id</th>
-            <th>Name</th>
+            <th>{{ 'id'|trans({}, 'HyperAdsBundle') }}</th>
+            <th>{{ 'name'|trans({}, 'HyperAdsBundle') }}</th>
             <th>Url</th>
-            <th>Actions</th>
+            <th>{{ 'actions'|trans({}, 'HyperAdsBundle') }}</th>
         </tr>
     </thead>
     <tbody>
@@ -23,10 +24,14 @@
             <td>
                 <ul>
                     <li>
-                        <a href="{{ path('admin_page_show', { 'id': entity.id }) }}">show</a>
+                        <a href="{{ path('admin_page_show', { 'id': entity.id }) }}">
+                            {{ '__show'|trans({}, 'HyperAdsBundle') }}
+                        </a>
                     </li>
                     <li>
-                        <a href="{{ path('admin_page_edit', { 'id': entity.id }) }}">edit</a>
+                        <a href="{{ path('admin_page_edit', { 'id': entity.id }) }}">
+                            {{ '__edit'|trans({}, 'HyperAdsBundle') }}
+                        </a>
                     </li>
                 </ul>
             </td>
@@ -34,11 +39,13 @@
     {% endfor %}
     </tbody>
 </table>
-
+{% else %}
+<div class="message">{{ 'no.entities'|trans({}, 'HyperAdsBundle') }}</div>
+{% endif %}
 <ul>
     <li>
         <a href="{{ path('admin_page_new') }}">
-            Create a new entry
+            {{ 'create.new.entry'|trans({}, 'HyperAdsBundle') }}
         </a>
     </li>
 </ul>
