--- a/src/Hyper/AdsBundle/Resources/views/Banner/index.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Banner/index.html.twig
@@ -10,11 +10,11 @@
     <thead>
         <tr>
             <th>{{ 'id'|trans({}, 'HyperAdsBundle') }}</th>
-            <th>File</th>
-            <th>Extension</th>
-            <th>Width</th>
-            <th>Height</th>
-            <th>Type</th>
+            <th>{{ 'file'|trans({}, 'HyperAdsBundle') }}</th>
+            <th>{{ 'extension'|trans({}, 'HyperAdsBundle') }}</th>
+            <th>{{ 'width'|trans({}, 'HyperAdsBundle') }}</th>
+            <th>{{ 'height'|trans({}, 'HyperAdsBundle') }}</th>
+            <th>{{ 'type'|trans({}, 'HyperAdsBundle') }}</th>
             <th>{{ 'actions'|trans({}, 'HyperAdsBundle') }}</th>
         </tr>
     </thead>
