--- a/src/Hyper/AdsBundle/Resources/views/Campaign/index.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Campaign/index.html.twig
@@ -15,8 +15,8 @@
         <tr>
             <th>{{ 'id'|trans({}, 'HyperAdsBundle') }}</th>
             <th>{{ 'name'|trans({}, 'HyperAdsBundle') }}</th>
-            <th>Startdate</th>
-            <th>Expiredate</th>
+            <th>{{ 'date.start'|trans({}, 'HyperAdsBundle') }}</th>
+            <th>{{ 'date.expire'|trans({}, 'HyperAdsBundle') }}</th>
             <th>{{ 'actions'|trans({}, 'HyperAdsBundle') }}</th>
         </tr>
     </thead>
