--- a/src/Hyper/AdsBundle/Resources/views/Page/index.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Page/index.html.twig
@@ -11,7 +11,7 @@
         <tr>
             <th>{{ 'id'|trans({}, 'HyperAdsBundle') }}</th>
             <th>{{ 'name'|trans({}, 'HyperAdsBundle') }}</th>
-            <th>Url</th>
+            <th>{{ 'url'|trans({}, 'HyperAdsBundle') }}</th>
             <th>{{ 'actions'|trans({}, 'HyperAdsBundle') }}</th>
         </tr>
     </thead>
