--- a/src/Hyper/AdsBundle/Resources/views/Zone/index.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Zone/index.html.twig
@@ -11,10 +11,10 @@
         <tr>
             <th>{{ 'id'|trans({}, 'HyperAdsBundle') }}</th>
             <th>{{ 'name'|trans({}, 'HyperAdsBundle') }}</th>
-            <th>Enabled</th>
-            <th>Maxwidth</th>
-            <th>Maxheight</th>
-            <th>Type</th>
+            <th>{{ 'enabled'|trans({}, 'HyperAdsBundle') }}</th>
+            <th>{{ 'max.width'|trans({}, 'HyperAdsBundle') }}</th>
+            <th>{{ 'max.height'|trans({}, 'HyperAdsBundle') }}</th>
+            <th>{{ 'type'|trans({}, 'HyperAdsBundle') }}</th>
             <th>{{ 'actions'|trans({}, 'HyperAdsBundle') }}</th>
         </tr>
     </thead>
