--- a/src/Hyper/AdsBundle/Resources/views/Banner/edit.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Banner/edit.html.twig
@@ -3,25 +3,25 @@
 {{ 'edit.banner'|trans({}, 'HyperAdsBundle') }}
 {% endblock %}
 {% block body %}
-<h1>Banner edit</h1>
+<h1>{{ 'edit.banner'|trans({}, 'HyperAdsBundle') }}</h1>
 
 <form action="{{ path('admin_banner_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
     {{ form_widget(edit_form) }}
     <p>
-        <button type="submit">Edit</button>
+        <button type="submit">{{ '__edit'|trans({}, 'HyperAdsBundle') }}</button>
     </p>
 </form>
 
 <ul class="record_actions">
     <li>
         <a href="{{ path('admin_banner') }}">
-            Back to the list
+            {{ 'back.to.the.list'|trans({}, 'HyperAdsBundle') }}
         </a>
     </li>
     <li>
         <form action="{{ path('admin_banner_delete', { 'id': entity.id }) }}" method="post">
             {{ form_widget(delete_form) }}
-            <button type="submit">Delete</button>
+            <button type="submit">{{ '__delete'|trans({}, 'HyperAdsBundle') }}</button>
         </form>
     </li>
 </ul>
