--- a/src/Hyper/AdsBundle/Resources/views/Campaign/show.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Campaign/show.html.twig
@@ -3,24 +3,24 @@
 {{ 'show.campaign'|trans({'campaignName': entity.name}, 'HyperAdsBundle') }}
 {% endblock %}
 {% block body %}
-<h1>Campaign</h1>
+<h1>{{ 'show.campaign'|trans({'campaignName': entity.name}, 'HyperAdsBundle') }}</h1>
 
 <table class="record_properties">
     <tbody>
         <tr>
-            <th>Id</th>
+            <th>{{ 'id'|trans({}, 'HyperAdsBundle') }}</th>
             <td>{{ entity.id }}</td>
         </tr>
         <tr>
-            <th>Name</th>
+            <th>{{ 'name'|trans({}, 'HyperAdsBundle') }}</th>
             <td>{{ entity.name }}</td>
         </tr>
         <tr>
-            <th>Startdate</th>
+            <th>{{ 'date.start'|trans({}, 'HyperAdsBundle') }}</th>
             <td>{{ entity.startDate|date('Y-m-d H:i:s') }}</td>
         </tr>
         <tr>
-            <th>Expiredate</th>
+            <th>{{ 'date.expire'|trans({}, 'HyperAdsBundle') }}</th>
             <td>{{ entity.expireDate|date('Y-m-d H:i:s') }}</td>
         </tr>
     </tbody>
@@ -29,18 +29,18 @@
 <ul class="record_actions">
     <li>
         <a href="{{ path('admin_campaign') }}">
-            Back to the list
+            {{ 'back.to.the.list'|trans({}, 'HyperAdsBundle') }}
         </a>
     </li>
     <li>
         <a href="{{ path('admin_campaign_edit', { 'id': entity.id }) }}">
-            Edit
+            {{ '__edit'|trans({}, 'HyperAdsBundle') }}
         </a>
     </li>
     <li>
         <form action="{{ path('admin_campaign_delete', { 'id': entity.id }) }}" method="post">
             {{ form_widget(delete_form) }}
-            <button type="submit">Delete</button>
+            <button type="submit">{{ '__delete'|trans({}, 'HyperAdsBundle') }}</button>
         </form>
     </li>
 </ul>
