--- a/src/Hyper/AdsBundle/Resources/views/Default/index.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Default/index.html.twig
@@ -3,5 +3,8 @@
 {{ '__welcome'|trans({}, 'HyperAdsBundle') }}
 {% endblock %}
 {% block body %}
-<blockquote>Many a small thing has been made large by the right kind of advertising.</blockquote>
+<blockquote class="span-7 push-2">Many a small thing has been made large by the right kind of advertising.
+    <br />
+    <span class="right">&mdash; Mark Twain</span>
+</blockquote>
 {% endblock %}
