--- a/src/Hyper/AdsBundle/Resources/views/Zone/show.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Zone/show.html.twig
@@ -3,32 +3,32 @@
 {{ 'show.zone'|trans({'zoneName': entity.name}, 'HyperAdsBundle') }}
 {% endblock %}
 {% block body %}
-<h1>Zone</h1>
+<h1>{{ 'show.zone'|trans({'zoneName': entity.name}, 'HyperAdsBundle') }}</h1>
 
 <table class="record_properties">
     <tbody>
         <tr>
-            <th>Id</th>
+            <th>{{ 'id'|trans({}, 'HyperAdsBundle') }}</th>
             <td>{{ entity.id }}</td>
         </tr>
         <tr>
-            <th>Name</th>
+            <th>{{ 'name'|trans({}, 'HyperAdsBundle') }}</th>
             <td>{{ entity.name }}</td>
         </tr>
         <tr>
-            <th>Enabled</th>
+            <th>{{ 'name'|trans({}, 'HyperAdsBundle') }}</th>
             <td>{{ entity.enabled }}</td>
         </tr>
         <tr>
-            <th>Maxwidth</th>
+            <th>{{ 'max.width'|trans({}, 'HyperAdsBundle') }}</th>
             <td>{{ entity.maxWidth }}</td>
         </tr>
         <tr>
-            <th>Maxheight</th>
+            <th>{{ 'max.height'|trans({}, 'HyperAdsBundle') }}</th>
             <td>{{ entity.maxHeight }}</td>
         </tr>
         <tr>
-            <th>Type</th>
+            <th>{{ 'type'|trans({}, 'HyperAdsBundle') }}</th>
             <td>{{ entity.type }}</td>
         </tr>
     </tbody>
@@ -37,18 +37,18 @@
 <ul class="record_actions">
     <li>
         <a href="{{ path('admin_zone') }}">
-            Back to the list
+            {{ 'back.to.the.list'|trans({}, 'HyperAdsBundle') }}
         </a>
     </li>
     <li>
         <a href="{{ path('admin_zone_edit', { 'id': entity.id }) }}">
-            Edit
+            {{ '__edit'|trans({}, 'HyperAdsBundle') }}
         </a>
     </li>
     <li>
         <form action="{{ path('admin_zone_delete', { 'id': entity.id }) }}" method="post">
             {{ form_widget(delete_form) }}
-            <button type="submit">Delete</button>
+            <button type="submit">{{ '__delete'|trans({}, 'HyperAdsBundle') }}</button>
         </form>
     </li>
 </ul>
