--- a/src/Hyper/AdsBundle/Resources/views/Banner/show.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Banner/show.html.twig
@@ -13,7 +13,7 @@
         </tr>
         <tr>
             <th>{{ 'file'|trans({}, 'HyperAdsBundle') }}</th>
-            <td>{{ entity.file }}</td>
+            <td>{{ entity.path }}</td>
         </tr>
         <tr>
             <th>{{ 'extension'|trans({}, 'HyperAdsBundle') }}</th>
