--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -7,6 +7,7 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
         <link rel="stylesheet" type="text/css" href="{{ asset('css/screen.css') }}" media="screen,projection" />
         <link rel="stylesheet" type="text/css" href="{{ asset('css/print.css') }}" media="print" />
+        <link rel="stylesheet" type="text/css" href="{{ asset('css/main.css') }}" media="screen" />
         <!--[if lt IE 8]>
             <link rel="stylesheet" href="{{ asset('css/ie.css') }}" type="text/css" media="screen, projection">
         <![endif]-->
