--- a/src/Hyper/AdsBundle/Resources/views/Default/head.js.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Default/head.js.twig
@@ -17,7 +17,7 @@
 
         for (var col in Acid.dataCollectors) {
             var hash = Acid.dataCollectors[col]()
-            for (key in hash) {
+            for (var key in hash) {
                 params += key + '=' + encodeURIComponent(hash[key]);
             }
         }
@@ -36,7 +36,7 @@
 
     function isFlashEnabled() {
         if (navigator.plugins && navigator.plugins.length > 0) {
-            if (navigator.plugins['Shockwave Flash'] || navigator.plugins['Showckwave Flash 2.0']) {
+            if (navigator.plugins['Shockwave Flash'] || navigator.plugins['Shockwave Flash 2.0']) {
                 return true;
             }
         } else if (navigator.mimeTypes && navigator.mimeTypes.length > 0) {
