--- a/src/Hyper/AdsBundle/Resources/views/Default/show.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Default/show.html.twig
@@ -1,3 +1,1 @@
-<script type="text/javascript">
-    var acidCookie = Math.round(Math.random() * 1000);
-</script>
+<img src="/{{ banner.fileUrl }}">
